# SourceSherpa

./: .gitignore  .snyk  README.md  TODO_treesitter_sidecar_issues.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/issues/: automate_build_my_languages_so.md  integrate_sql_yaml_grammars.md
.github/workflows/: nightly_full_test.yml  python-tests.yml  snyk.yml  sonar.yml  test_api.yml  test_extractors.yml  test_storage.yml
examples/: requirements.txt  usage.ipynb
pyxis/es/: clone-all.sh
pyxis/plx/: clone-all.sh
src/: __init__.py  docker-componse.mongo.yml  docker-compose.qdrant.yml
src/api/: app.py  bedrock_utils.py  main.py  test_context_search.py
src/cli/: main.py
src/config/: __init__.py  settings.py
src/context/: block.py
src/extractors/: code_summary_extractor.py  dummy_extractor.py  sidecar_ast_extractor.py
src/orchestration/: extract_load_summaries.py
src/patterns/: dotnet.py
src/prompts/: dev_patterns_prompt.md  final_answer.md  loader.py  mission_prefix.md  mongo_schema_structure.md  routing_judge.md
src/sourcesherpa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/storage/: ast_loader.py  feature_loader.py  mongo.py  pattern_loader.py
tests/: TESTING_PATTERN.md  conftest.py  test_context.py  test_storage.py
tests/api/: test_context_search.py
tests/data/: sample.cs  sample.css  sample.html  sample.json  sample.tsx  sample.yaml
tests/extractors/: test_code_summary_extractor.py  test_extract_csharp.py  test_sidecar_ast_extractor.py
ui/: package-lock.json  package.json
(+28 files in other folders)
